# AGX-travel

./: .gitignore  README.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/versions/: 20260413_0001_initial.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routers/: auth.py  (+5 more)
backend/app/core/: deps.py  errors.py  middleware.py  security.py
backend/app/db/: base.py  session.py
backend/app/knowledge_graph/: schema.py  service.py
backend/app/models/: booking.py  user.py
backend/app/monitoring/: worker.py
backend/app/orchestration/: state.py  workflow.py
backend/app/providers/: http_client.py  mock_providers.py
backend/app/rag/: vector_store.py
backend/app/repositories/: booking_repository.py  context_repository.py  explanation_repository.py  itinerary_repository.py  user_repository.py
backend/app/schemas/api/: contracts.py
backend/app/schemas/internal/: dtos.py
backend/app/services/: auth_service.py  booking_service.py  context_monitoring_service.py  evaluation_service.py  explainability_service.py  intent_service.py  itinerary_service.py  knowledge_retrieval_service.py  planning_service.py  replanning_service.py  traveler_profile_service.py
backend/app/utils/: dates.py
backend/app/xai/: trace_builder.py
backend/data/scenarios/: traveler_scenarios.json
backend/scripts/: evaluate.py
backend/tests/: conftest.py  test_auth.py  test_context.py  test_explainability.py  test_itinerary.py  test_replan.py  test_serp_fallback.py
(+35 files in other folders)
